# coziyoo-v2

./: .env.example  .env.local  .env.local.example  .gitignore  AGENTS.md  BRAND_VOICE_LOCK.md  CLAUDE.md  LICENSE  README.md  api-server-v2-plan.md  app.json  coolify-data-important-dont-delete  deploy.command  docker-compose.dev.yml  docker-compose.yml  new-plan.md  package-lock.json  package.json  security_update.md  securtiy_plan.md  task-list.md  tsconfig.json
agent-python/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
agent-python/src/: agent.py  agent_http_runner.py
apps/voice-agent/: .env.example  BRAIN.md  N8N_API.md  PLAN.md  README.md  TASKLIST.md  package.json  pyproject.toml
apps/voice-agent/mobile/: App.tsx  index.js  package.json
apps/voice-agent/mobile/ios/Coziyoo/: AppDelegate.mm  Info.plist
apps/voice-agent/mobile/src/screens/: HomeScreen.tsx  LoginScreen.tsx  SettingsScreen.tsx
apps/voice-agent/mobile/src/utils/: auth.ts
apps/voice-agent/scripts/: sync_n8n_workflows.py
apps/voice-agent/src/voice_agent/: curl_parser.py  dashboard_api.py  dashboard_auth.py  dashboard_forms.py  entrypoint.py  join_api.py
apps/voice-agent/src/voice_agent/actions/: emitter.py  schema.py
apps/voice-agent/src/voice_agent/config/: settings.py
apps/voice-agent/src/voice_agent/dispatch/: __init__.py  manager.py  models.py
apps/voice-agent/src/voice_agent/providers/: __init__.py  (+7 more)
apps/voice-agent/tests/: conftest.py  test_actions_schema.py  test_adapters.py  test_dashboard_call_logs.py  test_dashboard_profiles.py  test_dispatch_manager.py  test_entrypoint_wiring.py  test_n8n_helpers.py
apps/voice-agent/workflows/: brain_6KFFgjd26nF0kNCA.json  mcp_XYiIkxpa4PlnddQt.json
(+769 files in other folders)
